Bug 1143806 - Tolerate timeouts occurring if a device driver is in the process of resetting. r=jrmuizel, a=ritu

--HG--
extra : transplant_source : %3B%B3k%3E%F6N%40%8A1%23%EE%E2%D6%17%AFnh%CD%E2%CA